--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -4,8 +4,7 @@ on: [push, pull_request]
 
 env:
   # This will pull the github repo name
-  PKG_NAME: ${{ github.event.repository.name }}
-#  NODE_VERSION: 17
+  PKG_NAME: php
 
 # Required secrets:
 # DOCKER_DEV_HOST       Self-hosted docker registry
@@ -19,31 +18,25 @@ env:
 jobs:
   build:
     name: Build Project
-    # don't run for template repo
     if: github.repository != 'steilerDev/docker-base'
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-#    - name: Setup node
-#      uses: actions/setup-node@v2
-#      with:
-#        node-version: ${{ env.NODE_VERSION }}
-#    - name: Install dependencies & build app
-#      run: |
-#        npm install && \
-#        npm run test && \
-#        npm run build && \
-#        npm run docs
     - name: Package docker artifacts
       run: |
-        if [ ! -d ./rootfs ]; then mkdir rootfs; fi && \
-        tar -C ./rootfs -czf ./rootfs.tar.gz ./
+        if [ -d ./rootfs ]; then
+          tar -C ./rootfs -czf ./rootfs.tar.gz ./
+        else
+          for d in */ ; do
+            tar -C ./$d/rootfs -czf ./$d/rootfs.tar.gz ./
+          done
+        fi
     - name: Upload docker artifacts
       uses: actions/upload-artifact@v2
       with:
         name: rootfs
-        path: ./rootfs.tar.gz
+        path: ./**/rootfs.tar.gz
 
   publish-docker-dev:
     name: Publish Project to steilerGroup-Docker
@@ -59,9 +52,16 @@ jobs:
     - name: Login to Docker Registry
       run: docker login ${{secrets.DOCKER_DEV_HOST}} -u ${{secrets.DOCKER_DEV_USERNAME}} -p ${{secrets.DOCKER_DEV_PWD}}
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{secrets.DOCKER_DEV_HOST}}/$PKG_NAME:latest
-    - name: Push the Docker image
-      run: docker push ${{secrets.DOCKER_DEV_HOST}}/$PKG_NAME:latest
+      run: |
+        if [ -f ./rootfs.tar.gz]; then
+          docker build . --file Dockerfile --tag ${{secrets.DOCKER_DEV_HOST}}/$PKG_NAME:latest
+        else
+          for d in */ ; do
+            docker build . --file $d/Dockerfile --tag ${{secrets.DOCKER_DEV_HOST}}/$PKG_NAME:$d
+          done
+        fi
+    #- name: Push to DockerHub
+    #  run: docker image push --all-tags ${{secrets.DOCKER_DEV_HOST}}/$PKG_NAME
 
   publish-dockerhub:
     name: Publish Project to DockerHub
@@ -78,24 +78,21 @@ jobs:
     - name: Login to DockerHub
       run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PWD}}
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag $PKG_NAME
-#    - name: Get current version
-#      id: package-version
-#      uses: martinbeentjes/npm-get-version-action@master
-#      with:
-#        path: rootfs/opt/icloud-photos-sync
-    - name: Tag the Docker image
       run: |
-        docker image tag $PKG_NAME ${{secrets.DOCKER_USERNAME}}/$PKG_NAME:latest && \
-#        docker image tag $PKG_NAME ${{secrets.DOCKER_USERNAME}}/$PKG_NAME:${{ steps.package-version.outputs.current-version}} && \
-        docker image ls
-    - name: Push to DockerHub
-      run: docker image push --all-tags ${{secrets.DOCKER_USERNAME}}/$PKG_NAME
-    - name: Update DockerHub readme
-      uses: peter-evans/dockerhub-description@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PWD }}
-        repository: ${{secrets.DOCKER_USERNAME}}/${{env.PKG_NAME}}
-        readme-filepath: ./README.md
-        short-description: ${{ github.event.repository.description }}
+        if [ -f ./rootfs.tar.gz]; then
+          docker build . --file Dockerfile --tag ${{secrets.DOCKER_DEV_HOST}}/$PKG_NAME:latest
+        else
+          for d in */ ; do
+            docker build . --file $d/Dockerfile --tag ${{secrets.DOCKER_DEV_HOST}}/$PKG_NAME:$d
+          done
+        fi
+    #- name: Push to DockerHub
+    #  run: docker image push --all-tags ${{secrets.DOCKER_USERNAME}}/$PKG_NAME
+    #- name: Update DockerHub readme
+    #  uses: peter-evans/dockerhub-description@v2
+    #  with:
+    #    username: ${{ secrets.DOCKER_USERNAME }}
+    #    password: ${{ secrets.DOCKER_PWD }}
+    #    repository: ${{secrets.DOCKER_USERNAME}}/${{env.PKG_NAME}}
+    #    readme-filepath: ./README.md
+    #    short-description: ${{ github.event.repository.description }}
