--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -49,6 +49,8 @@ jobs:
       uses: actions/checkout@v2
     - name: Download artifacts
       uses: actions/download-artifact@v2
+      with:
+        path: ./
     - name: Login to Docker Registry
       run: docker login ${{secrets.DOCKER_DEV_HOST}} -u ${{secrets.DOCKER_DEV_USERNAME}} -p ${{secrets.DOCKER_DEV_PWD}}
     - name: Build the Docker image
@@ -76,6 +78,8 @@ jobs:
       uses: actions/checkout@v2
     - name: Download artifacts
       uses: actions/download-artifact@v2
+      with:
+        path: ./
     - name: Login to DockerHub
       run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PWD}}
     - name: Build the Docker image
