--- a/7-wiki/Dockerfile
+++ b/7-wiki/Dockerfile
@@ -1,11 +1,15 @@
 FROM php:7-fpm
-
-RUN apt-get update \
-    && apt-get install \
+ENV DEBIAN_FRONTEND noninteractive
+ 
+ RUN apt-get update && \
+    apt-get -y upgrade && \
+    apt-get install \
         --no-install-recommends \
         --fix-missing \
         --assume-yes \
             libxml2-dev libcurl4-gnutls-dev libonig-dev && \
-        rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
- 
+    apt-get clean autoclean && \
+    apt-get autoremove && \
+    rm -rf /var/lib/{apt,dpkg,cache,log} /tmp/* /var/tmp/*
+
 RUN docker-php-ext-install opcache mbstring xml intl json curl fileinfo pcntl
