--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -85,14 +85,14 @@ jobs:
     - name: Build the Docker image
       run: |
         if [ -f Dockerfile ]; then
-          docker build . --file Dockerfile --tag ${{secrets.DOCKER_DEV_HOST}}/$PKG_NAME:latest
+          docker build . --file Dockerfile --tag ${{secrets.DOCKER_USERNAME}}/$PKG_NAME:latest
         else
           for d in */ ; do
             if [ -f ${d%/}/Dockerfile ]; then
               if [ -f rootfs/${d%/}/rootfs.tar.gz ]; then
                 mv rootfs/${d%/}/rootfs.tar.gz ${d}
               fi
-              docker build ${d} --file ${d%/}/Dockerfile --tag ${{secrets.DOCKER_DEV_HOST}}/$PKG_NAME:${d%/}
+              docker build ${d} --file ${d%/}/Dockerfile --tag ${{secrets.DOCKER_USERNAME}}/$PKG_NAME:${d%/}
             fi
           done
         fi
