--- a/7-rss/Dockerfile
+++ b/7-rss/Dockerfile
@@ -12,4 +12,4 @@ ENV DEBIAN_FRONTEND noninteractive
     apt-get autoremove && \
     rm -rf /var/lib/{apt,dpkg,cache,log} /tmp/* /var/tmp/*
 
-RUN docker-php-ext-install mysqli pdo pdo_mysql gd opcache mbstring xml intl json curl fileinfo pcntl
+RUN docker-php-ext-install mysqli pdo pdo_mysql pdo_pgsql gd opcache mbstring xml intl json curl fileinfo pcntl
