Adding necesary dependencies

--- a/7-rss/Dockerfile
+++ b/7-rss/Dockerfile
@@ -7,9 +7,10 @@ ENV DEBIAN_FRONTEND noninteractive
         --no-install-recommends \
         --fix-missing \
         --assume-yes \
-            libpng-dev freetype* libxml2-dev libcurl4-gnutls-dev libonig-dev && \
+            libpng-dev freetype* libxml2-dev libcurl4-gnutls-dev libonig-dev libpq-dev && \
     apt-get clean autoclean && \
     apt-get autoremove && \
     rm -rf /var/lib/{apt,dpkg,cache,log} /tmp/* /var/tmp/*
 
-RUN docker-php-ext-install mysqli pdo pdo_mysql pdo_pgsql gd opcache mbstring xml intl json curl fileinfo pcntl
+RUN docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql && \
+    docker-php-ext-install mysqli pdo pdo_mysql pdo_pgsql gd opcache mbstring xml intl json curl fileinfo pcntl
