--- a/rss/Dockerfile
+++ b/rss/Dockerfile
@@ -7,7 +7,7 @@ ENV DEBIAN_FRONTEND noninteractive
         --no-install-recommends \
         --fix-missing \
         --assume-yes \
-            libpng-dev freetype* libxml2-dev libcurl4-gnutls-dev libonig-dev libpq-dev && \
+            git libpng-dev freetype* libxml2-dev libcurl4-gnutls-dev libonig-dev libpq-dev && \
     apt-get clean autoclean && \
     apt-get autoremove && \
     rm -rf /var/lib/{apt,dpkg,cache,log} /tmp/* /var/tmp/*
