--- a/rss/Dockerfile
+++ b/rss/Dockerfile
@@ -7,9 +7,9 @@ ENV DEBIAN_FRONTEND noninteractive
         --no-install-recommends \
         --fix-missing \
         --assume-yes \
-            git libpng-dev freetype* libxml2-dev libcurl4-gnutls-dev libonig-dev libpq-dev && \
+            git rsync libpng-dev freetype* libxml2-dev libcurl4-gnutls-dev libonig-dev libpq-dev libzip-dev && \
     apt-get clean autoclean && \
     apt-get autoremove && \
     rm -rf /var/lib/{apt,dpkg,cache,log} /tmp/* /var/tmp/*
 
-RUN docker-php-ext-install pdo pdo_pgsql gd opcache intl pcntl
+RUN docker-php-ext-install pdo pdo_pgsql pgsql pdo_mysql gd opcache intl pcntl zip exif
