--- a/rss/Dockerfile
+++ b/rss/Dockerfile
@@ -12,7 +12,22 @@ ENV DEBIAN_FRONTEND noninteractive
     apt-get autoremove && \
     rm -rf /var/lib/{apt,dpkg,cache,log} /tmp/* /var/tmp/*
 
-RUN docker-php-ext-install pdo pdo_pgsql pgsql pdo_mysql gd opcache intl pcntl zip exif
+RUN docker-php-ext-install \
+    #curl \
+    #json \
+    #xml \
+    #pcre \
+    #ctype \
+    pdo \
+    pdo_pgsql \
+    pgsql \
+    pdo_mysql \
+    gd \
+    opcache \
+    intl \
+    pcntl \
+    zip \
+    exif
 
 RUN sed 's/\(memory_limit =\) 128M/\1 256M/' $PHP_INI_DIR/php.ini-production \
     > $PHP_INI_DIR/php.ini
